# openai-rst

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yaml
examples/: assistant.rs  chat_completion.rs  completion.rs  embedding.rs  function_call.rs  function_call_role.rs  text_to_speech.rs  vision.rs
src/: api.rs  assistant.rs  audio.rs  chat_completion.rs  client.rs  common.rs  completion.rs  edit.rs  embedding.rs  error.rs  file.rs  fine_tuning.rs  image.rs  lib.rs  message.rs  models.rs  moderation.rs  run.rs  thread.rs
