[package]
name = "openai-rst"
rust-version = "1.77.0"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/ra0x3/openai-rst"
authors = ["Rashad Alston <rashad@helpar.io>", "Dongri Jin <dongrium@gmail.com>"]
license = "Apache-2.0"
description = "OpenAI API Rust client"
repository = "https://github.com/ra0x3/openai-rst"

[dependencies]
minreq = { version = "2", default-features = false, features = ["https-rustls", "json-using-serde", "proxy"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
strum = { version = "0.26", features = ["derive"] }