[package]
name = "openai-rst"
rust-version = "1.78.0"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/ra0x3/openai-rst"
authors = ["Rashad Alston <rashad@helpar.io>", "Dongri Jin <dongrium@gmail.com>"]
license = "Apache-2.0"
description = "OpenAI API Rust client"
repository = "https://github.com/ra0x3/openai-rst"

[dependencies]
async-std = { version = "1.12" }
minreq = { version = "2", default-features = false, features = ["https-rustls", "json-using-serde", "proxy"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
strum = { version = "0.26", features = ["derive"] }
thiserror = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["ansi", "json", "env-filter"], optional = true }

[features]
tracing = ["dep:tracing", "tracing-subscriber"]
default = ["tracing"]
